--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    tools:ignore="SpUsage">
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginHorizontal="50dp"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:text="@string/about_app"
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         android:background="@drawable/btn_rounded_corner"
@@ -21,7 +23,7 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:layout_marginHorizontal="50dp"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:text="@string/about_developer"
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         android:background="@drawable/btn_rounded_corner"
