Fix help buttons view.

--- a/app/src/main/res/layout/activity_autocostcalc.xml
+++ b/app/src/main/res/layout/activity_autocostcalc.xml
@@ -64,17 +64,17 @@
                 android:autofillHints="no"
                 android:inputType="number"
                 android:id="@+id/AnnualMileage"/>
-            <GridLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_marginHorizontal="30dp"
-                android:columnCount="2"
-                android:rowCount="3">
+                android:layout_marginHorizontal="30dp">
                 <EditText
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="fill"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@id/lossOfValueHelpButton"
+                    android:layout_marginEnd="10dp"
                     android:hint="@string/lost_profit"
                     android:textSize="20dp"
                     android:autofillHints="no"
@@ -83,14 +83,19 @@
                 <Button
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignBottom="@id/LostProfit"
+                    android:layout_marginEnd="10dp"
                     android:background="@drawable/help_icon"
                     android:contentDescription="@string/helpButton"
                     android:id="@+id/lostProfitHelpButton"/>
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="fill"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@id/lossOfValueHelpButton"
+                    android:layout_marginEnd="10dp"
+                    android:layout_below="@id/LostProfit"
                     android:hint="@string/loss_of_value"
                     android:textSize="20dp"
                     android:autofillHints="no"
@@ -99,25 +104,32 @@
                 <Button
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignBottom="@id/LossOfValue"
+                    android:layout_marginEnd="10dp"
                     android:background="@drawable/help_icon"
                     android:contentDescription="@string/helpButton"
                     android:id="@+id/lossOfValueHelpButton"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="fill"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@id/LossOfValue"
                     android:layout_marginTop="10dp"
+                    android:layout_marginStart="3dp"
                     android:textSize="20dp"
                     android:autofillHints="no"
                     android:hint="@string/credit_yes_no"/>
                 <Spinner
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@id/lossOfValueHelpButton"
                     android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
                     android:textSize="20dp"
                     android:id="@+id/Credit"/>
-            </GridLayout>
+            </RelativeLayout>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -157,24 +169,30 @@
                 android:inputType="numberDecimal"
                 android:id="@+id/InterestRate"
                 android:visibility="gone"/>
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="30dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginEnd="60dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@id/checkBox"
+                    android:layout_marginStart="3dp"
                     android:textSize="20dp"
                     android:autofillHints="no"
-                    android:hint="@string/hull_insurance_yes_no"/>
+                    android:hint="@string/hull_insurance_yes_no"
+                    android:id="@+id/hull_insurance"/>
                 <CheckBox
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignBottom="@id/hull_insurance"
+                    android:layout_marginEnd="15dp"
                     android:id="@+id/checkBox"/>
-            </LinearLayout>
+            </RelativeLayout>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
